--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="./assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="./assets/docs/docs.css" rel="stylesheet">
+  <meta name="google-site-verification" content="iZvf8azl9oIIqqxAWeIIBApfKzzYmplcESc0MYp-Rnk" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJ177RVEN8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-RJ177RVEN8');
+  </script>
 </head>
 <body>
   <app-root></app-root>
