--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Yes</title>
-  <base href="/">
+  <title>SG Services</title>
+  <meta name="description" content="Unlock the Power of Web and Mobile Innovation with SoftGenic Services. From sleek web design to high-performance mobile apps, we transform your ideas into reality. Explore our services today">
+
+  <!-- Favicon -->
+
+  <link href="./assets/images/sg-logo.png" rel="icon" type="image/png">  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="./assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="./assets/docs/docs.css" rel="stylesheet">
   <meta name="google-site-verification" content="iZvf8azl9oIIqqxAWeIIBApfKzzYmplcESc0MYp-Rnk" />
