--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>SG Services</title>
-  <meta name="description" content="Unlock the Power of Web and Mobile Innovation with SoftGenic Services. From sleek web design to high-performance mobile apps, we transform your ideas into reality. Explore our services today">
+  <meta name="description" content="Unlock the Power of Web and Mobile Innovation with SoftGenic Services. From sleek web design to high-performance mobile apps, we transform your ideas into reality. Explore our services today.">
 
   <!-- Favicon -->
 
@@ -12,6 +12,9 @@
   <link href="./assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="./assets/docs/docs.css" rel="stylesheet">
   <meta name="google-site-verification" content="iZvf8azl9oIIqqxAWeIIBApfKzzYmplcESc0MYp-Rnk" />
+
+
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJ177RVEN8"></script>
   <script>
@@ -20,6 +23,8 @@
     gtag('js', new Date());
     gtag('config', 'G-RJ177RVEN8');
   </script>
+
+  
 </head>
 <body>
   <app-root></app-root>
