--- a/src/index.html
+++ b/src/index.html
@@ -24,31 +24,11 @@
     gtag('config', 'G-RJ177RVEN8');
   </script>
 
-<link rel="stylesheet" href="./assets/css/owl.carousel.css">
+<!-- <link rel="stylesheet" href="./assets/css/owl.carousel.css"> -->
 </head>
-<script type="text/javascript" src="./assets/js/jquery.min.js.download"></script>
-<script type="text/javascript" src="./assets/js/owl.carousel.js.download"></script>
-<script>
-  jQuery('.services-slide').owlCarousel({
-    loop: true,
-    autoplay: true,
-    autoplayTimeout: 3000,
-    autoplayHoverPause: true,
-    touchDrag: false,
-    mouseDrag: true,
-    nav: true,
-    margin: 15,
-    responsive: {
-        0: {
-            items: 1
-        },
-        992: {
-            items: 3
-        },
-      
-    }
-});
-</script>
+<!-- <script type="text/javascript" src="./assets/js/jquery.min.js.download"></script> -->
+<!-- <script type="text/javascript" src="./assets/js/owl.carousel.js.download"></script> -->
+
 <body>
   <app-root></app-root>
    
